@startuml shared-frontend-diagram
title QualiTrack - Shared Frontend

skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

package "external bounded contexts" <<External>> {
  class IamStore
  class LaboratoryStore
  class EquipmentStore
  class BatchStore
  class CaStore
  class RaStore
  class TrackingStore
  class SubscriptionStore
  class AuthenticationSection
}

package "shared" {

  package "domain.model" {
    interface BaseEntity {
      +id: number
    }
  }

  package "infrastructure" {
    interface BaseResource {
      +id: number
    }

    interface BaseResponse

    interface MessageResource {
      +message: string
    }

    interface BaseAssembler<TEntity, TResource, TResponse> {
      +toEntityFromResource(resource: TResource): TEntity
      +toResourceFromEntity(entity: TEntity): TResource
      +toEntitiesFromResponse(response: TResponse): TEntity[]
    }

    abstract class BaseApi {
    }

    abstract class ErrorHandlingEnabledBaseType {
      #handleError(operation: string): Function
    }

    abstract class BaseApiEndpoint<TEntity, TResource, TResponse, TAssembler> {
      #http: HttpClient
      #endpointUrl: string
      #assembler: TAssembler
      +getAll(): Observable<TEntity[]>
      +getById(id: number): Observable<TEntity>
      +create(entity: TEntity): Observable<TEntity>
      +update(entity: TEntity, id: number): Observable<TEntity>
      +delete(id: number): Observable<void>
    }
  }

  package "presentation.components" {
    class LanguageSwitcher {
      #currentLang: string
      #languages: string[]
      #translate: TranslateService
      +useLanguage(language: string): void
    }

    class Toolbar {
    }

    class Layout {
      -router: Router
      #sidenavMode: 'side' | 'over'
      #sidenavOpened: boolean
      #options: NavigationOption[]
      #navigateTo(link: string): void
      #isActive(link: string): boolean
    }

    class NavigationOption <<type>> {
      +label: string
      +icon: string
      +link: string
      +children?: NavigationChild[]
    }

    class NavigationChild <<type>> {
      +label: string
      +link: string
    }
  }

  package "presentation.views" {
    class Home {
    }

    class About {
    }

    class PageNotFound {
      #invalidPath: string
      -route: ActivatedRoute
      -router: Router
      +ngOnInit(): void
      #navigateToHome(): void
    }

    class Dashboard {
      #iamStore: IamStore
      #laboratoryStore: LaboratoryStore
      #equipmentStore: EquipmentStore
      #batchStore: BatchStore
      #caStore: CaStore
      #raStore: RaStore
      #trackingStore: TrackingStore
      #subscriptionStore: SubscriptionStore
      -router: Router
      -translate: TranslateService
      -equipmentPollId?: interval
      -telemetryInitialized: boolean
      -langSubscription?: Subscription
      -languageVersion: Signal<number>
      #overviewChartType: ChartType
      #riskChartType: ChartType
      #chartOptions: ChartOptions
      #riskChartOptions: ChartOptions
      #isLoading: Signal<boolean>
      #healthScore: Signal<number>
      #healthLabelKey: Signal<string>
      #healthClass: Signal<string>
      #summaryCards: Signal<DashboardCard[]>
      #overviewChartData: Signal<ChartData>
      #riskChartData: Signal<ChartData>
      #attentionItems: Signal<AttentionItem[]>
      +ngOnInit(): void
      +ngOnDestroy(): void
      #navigateTo(route: string): void
      -initializeTelemetryFromFirstEquipment(): void
      -t(key: string, params?: Record<string, unknown>): string
    }

    class DashboardCard <<type>> {
      +labelKey: string
      +value: number
      +detailKey: string
      +detailParams: object
      +icon: string
      +className: string
      +route: string
    }

    class AttentionItem <<type>> {
      +labelKey: string
      +value: number
      +icon: string
      +route: string
    }
  }
}

BaseResource --|> BaseEntity
BaseApiEndpoint --|> ErrorHandlingEnabledBaseType
BaseApiEndpoint ..> BaseEntity
BaseApiEndpoint ..> BaseResource
BaseApiEndpoint ..> BaseResponse
BaseApiEndpoint ..> BaseAssembler

BaseAssembler ..> BaseEntity
BaseAssembler ..> BaseResource
BaseAssembler ..> BaseResponse

Toolbar --> LanguageSwitcher
Layout --> LanguageSwitcher
Layout *-- NavigationOption
NavigationOption *-- NavigationChild

Home --> Toolbar
Home --> AuthenticationSection
PageNotFound --> Router
PageNotFound --> ActivatedRoute

Dashboard --> IamStore
Dashboard --> LaboratoryStore
Dashboard --> EquipmentStore
Dashboard --> BatchStore
Dashboard --> CaStore
Dashboard --> RaStore
Dashboard --> TrackingStore
Dashboard --> SubscriptionStore
Dashboard --> Router
Dashboard --> TranslateService
Dashboard *-- DashboardCard
Dashboard *-- AttentionItem

@enduml
